--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>Rekenen online, Keersommen</title>
 
     <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="./css/normalize.min.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="./css/normalize.min.css"/>-->
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="./css/main.css"/>
 
@@ -22,25 +22,32 @@
     <script type="text/javascript" src="./js/main.js"></script>
   </head>
   <body>
-    <header>
-      <hgroup>
-        <h1>Rekenen</h1>
-        <h3>Leren om te keren</h3>
-      </hgroup>
-      <nav>
-        <ul>
-          <li id="home">
-            <a href="index.html">Home</a>
-          </li>
-          <li id="leren">
-            <a href="#">Leren</a>
-          </li>
-          <li id="toets">
-            <a href="#">Toets</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+	<nav class="navbar navbar-inverse navbar-default">
+	  <div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		  </button>
+		  <a class="navbar-brand" href="#">
+			<h1>Rekenen</h1>
+			<h3>Leren om te keren</h3>
+		  </a>
+		</div>
+
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		  <ul class="nav navbar-nav navbar-right">
+			<li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+			<li role="presentation"><a href="#practiceTables">Leren</a></li>
+			<li role="presentation"><a href="#practiceTables">Toetsen</a></li>
+		  </ul>
+		</div><!-- /.navbar-collapse -->
+	  </div><!-- /.container-fluid -->
+	</nav>
     <main>
       <section class="centerContent">
         <article class="overzicht" id="test">
@@ -68,6 +75,10 @@
         </article>
         <article>
           <h1>Oefenen</h1>
+    		  <div id="practiceTables">
+
+    		  </div>
+          <input type="button" value="check" class="btn btn-primary" id="checkOefenen"/>
         </article>
         <article>
           <h1>Toets</h1>
