changed structure of layout and added the grade system

--- a/public/index.html
+++ b/public/index.html
@@ -33,35 +33,37 @@
 			<span class="icon-bar"></span>
 		  </button>
 		  <a class="navbar-brand" href="#">
-			<h1>Rekenen</h1>
-			<h3>Leren om te keren</h3>
+			  <h1>Rekenen</h1>
+			  <h3>Leren om te keren</h3>
 		  </a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class="nav navbar-nav navbar-right">
-			<li class="active"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
+			<li class="active" role="presentation"><a href="index.html">Home<span class="sr-only">(current)</span></a></li>
 			<li role="presentation"><a href="#practiceTables">Leren</a></li>
-			<li role="presentation"><a href="#practiceTables">Toetsen</a></li>
+			<li role="presentation"><a href="toets.html">Toetsen</a></li>
 		  </ul>
 		</div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
     <main>
       <section class="centerContent">
+        <!--Het onderstaande span element bevat de benodigde html voor het aanpassen voor de tafels die worden getoont in de div #tableContainer-->
+        <span>
+          Tafels
+          <input type="number" class="smallNumberContainer" id="lowestTable" name="min" min="1" value="1"/>
+          t/m
+          <input type="number" class="smallNumberContainer" id="highestTable" name="max" min="2" value="10"/>
+          <span id="openTables" class="btn btn-default">laat zien</span>
+          <span class="subtext">
+            Verander deze waardes om de toets tafels en overzichts tafels te veranderen.
+          </span>
+        </span>
         <article class="overzicht" id="test">
           <h1 class="toggleDiv">Overzicht <span class="arrow"></span></h1>
           <div>
-            <!--Het onderstaande span element bevat de benodigde html voor het aanpassen voor de tafels die worden getoont in de div #tableContainer-->
-            <span>
-              Tafels
-              <input type="number" class="smallNumberContainer" id="lowestTable" name="min" min="1" value="1"/>
-              t/m
-              <input type="number" class="smallNumberContainer" id="highestTable" name="max" min="2" value="10"/>
-            </span>
-            <span id="openTables" class="btn btn-default">laat zien</span>
-
             <div id="tableContainer">
               <!--Hier komen de gekozen tafels wordt bij initialisatie gezet op de tafels 1 t/m 10-->
             </div>
@@ -81,20 +83,55 @@
       		  <div id="practiceTables">
 
       		  </div>
-            <input type="button" value="check" class="btn btn-primary hidden" id="checkToets"/>
-          </div>
-          <div class="test">
-            <input type="text" readonly="true" class="vraag"/>
-            <br/>
-            <input type ="text" placeholder="antwoord"/>
+
+            <div class="test">
+              <div class="progressContainer">
+                <div class="progress vertical">
+                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0"
+                    aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                    <span class="sr-only">70% Complete</span>
+                  </div>
+                </div>
+              </div>
+              <div class="questionContainer">
+                <span id="userInformation">Druk op enter om uw antwoord te controleren</span>
+                </br>
+                <input type="text" readonly="true" class="vraag"/>
+                <br/>
+                <input class="antwoord" type ="text" placeholder="antwoord"/>
+              </div>
+            </div>
+
+            <input type="button" value="Check" class="btn btn-primary" id="checkToets" />
+            <input type="button" value="Close test" class="btn btn-primary" id="closeToets"/>
           </div>
         </article>
       </section>
     </main>
     <footer>
       <span>
-        &copy;2015
+        copyright &copy;2015 basisschool Het Boterbloempje
       </span>
     </footer>
+
+    <!-- Button trigger modal -->
+    <button id="resultTrigger" type="button" class="btn btn-primary hidden" data-toggle="modal" data-target="#result">
+    </button>
+    <div class="modal fade" id="result" tabindex="-1" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Uitslag</h4>
+          </div>
+          <div class="modal-body">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
   </body>
 </html>
