made ship fly away after completing the oefenen toets

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         </article>
         <article>
           <h1 class="toggleDiv">(Oefen-)toets <span class="arrow"></span></h1>
-          <div class="testDiv">
+          <div class="padding">
             <div class="choiceContainer">
               <div id="oefenen">
 
@@ -86,6 +86,7 @@
 
             <div class="test">
               <img src="./media/fuelStation.png" class="fuelStation"/>
+              <img src="./media/spaceShip.png" class="spaceShip">
               <span class="fuelProgress">0</span>
                 <div class="progressContainer">
                   <div class="progress vertical">
