--- a/public/toets.html
+++ b/public/toets.html
@@ -15,7 +15,6 @@
     <!--<link rel="stylesheet" type="text/css" href="./css/normalize.min.css"/>-->
     <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="./css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="./css/toets.css"/>
 
     <!--Javascript/other scripts-->
     <script type="text/javascript" src="./js/jquery-1.11.3.min.js"></script>
@@ -77,6 +76,7 @@
 
             <div class="test">
               <img src="./media/fuelStation.png" class="fuelStation"/>
+              <img src="./media/spaceShip.png" class="spaceShip">
               <span class="fuelProgress">0</span>
                 <div class="progressContainer">
                   <div class="progress vertical">
